--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 clap = { version = "4.5.1", features = ["derive"] }
 indicatif = "0.17.8"
 sha2 = "0.10.8"
+time = { version = "0.3.34", features = ["local-offset"] }
 walkdir = "2.4.0"
